# wormvision-qt

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt
docs/: ARCHITECTURE.md  CPP-QT-REWRITE-SPEC.md  DLL_DEPENDENCIES.md  SDK_ANALYSIS.md  SKILLS.md  SMOKE_TEST.md  TASK.md
installer/: WormVision.iss
resources/: resources.qrc  wormvision.rc
resources/styles/: dark.qss  light.qss
scripts/: build.ps1  configure.ps1  package.ps1
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/data/: DatabaseManager.cpp  DatabaseManager.h  VideoLibraryService.cpp  VideoLibraryService.h
src/services/: CameraController.cpp  CameraController.h  CloudService.cpp  CloudService.h  VideoRecorder.cpp  VideoRecorder.h
src/utils/: AppInstanceLock.cpp  AppInstanceLock.h  AppPaths.cpp  AppPaths.h  RecordingDiagnostics.cpp  RecordingDiagnostics.h  ThemeManager.cpp  ThemeManager.h  VideoUtils.cpp  VideoUtils.h
src/widgets/: CaptureWidget.cpp  CaptureWidget.h  ControlPanelWidget.cpp  ControlPanelWidget.h  VideoDisplayWidget.cpp  VideoDisplayWidget.h  VideoLibraryWidget.cpp  VideoLibraryWidget.h
tests/: CMakeLists.txt  test_app_instance_lock.cpp  test_app_paths.cpp  test_database_manager.cpp  test_recording_diagnostics.cpp  test_smoke.cpp  test_video_library_service.cpp  test_video_library_widget.cpp  test_video_utils.cpp
